src/observer/sql/parser/y.output
Terminals unused in grammar

    PATH
    STRING_V


State 44 conflicts: 1 reduce/reduce
State 161 conflicts: 1 reduce/reduce


Grammar

    0 $accept: commands $end

    1 commands: %empty
    2         | commands command

    3 command: select
    4        | insert
    5        | update
    6        | delete
    7        | create_table
    8        | drop_table
    9        | show_tables
   10        | desc_table
   11        | create_index
   12        | drop_index
   13        | sync
   14        | begin
   15        | commit
   16        | rollback
   17        | load_data
   18        | help
   19        | exit
   20        | show_index
   21        | create_unique_index

   22 exit: EXIT SEMICOLON

   23 help: HELP SEMICOLON

   24 sync: SYNC SEMICOLON

   25 begin: TRX_BEGIN SEMICOLON

   26 commit: TRX_COMMIT SEMICOLON

   27 rollback: TRX_ROLLBACK SEMICOLON

   28 drop_table: DROP TABLE ID SEMICOLON

   29 show_tables: SHOW TABLES SEMICOLON

   30 desc_table: DESC ID SEMICOLON

   31 create_index: CREATE INDEX ID ON ID LBRACE ID index_list RBRACE SEMICOLON

   32 create_unique_index: CREATE UNIQUE INDEX ID ON ID LBRACE ID index_list RBRACE SEMICOLON

   33 show_index: SHOW INDEX FROM ID SEMICOLON

   34 drop_index: DROP INDEX ID SEMICOLON

   35 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

   36 attr_def_list: %empty
   37              | COMMA attr_def attr_def_list

   38 attr_def: ID_get type LBRACE number RBRACE
   39         | ID_get type

   40 number: NUMBER

   41 type: INT_T
   42     | DATE_T
   43     | STRING_T
   44     | FLOAT_T

   45 ID_get: ID

   46 insert: INSERT INTO ID VALUES brace_value_list multi_value_list SEMICOLON

   47 multi_value_list: %empty
   48                 | COMMA brace_value_list multi_value_list

   49 brace_value_list: LBRACE value value_list RBRACE

   50 value_list: %empty
   51           | COMMA value value_list

   52 value: NUMBER
   53      | FLOAT
   54      | SSS
   55      | LBRACE SELECT select_attr_update_sub FROM ID update_sub_rel_list where RBRACE

   56 value_update: NUMBER
   57             | FLOAT
   58             | SSS
   59             | LBRACE SELECT select_attr_update_sub FROM ID update_sub_rel_list where RBRACE

   60 update_sub_rel_list: %empty
   61                    | COMMA ID update_sub_rel_list

   62 select_attr_update_sub: STAR
   63                       | STAR attr_list
   64                       | ID attr_list
   65                       | ID DOT ID attr_list

   66 delete: DELETE FROM ID where SEMICOLON

   67 update: UPDATE ID SET ID EQ value_update update_id_list where SEMICOLON

   68 select: SELECT select_attr FROM ID rel_list where SEMICOLON

   69 select_attr: STAR
   70            | STAR attr_list
   71            | ID attr_list
   72            | ID DOT ID attr_list

   73 attr_list: %empty
   74          | COMMA ID attr_list
   75          | COMMA ID DOT ID attr_list

   76 index_list: %empty
   77           | COMMA ID index_list

   78 update_id_list: %empty
   79               | COMMA ID EQ value_update update_id_list

   80 rel_list: %empty
   81         | COMMA ID rel_list

   82 where: %empty
   83      | WHERE condition condition_list

   84 condition_list: %empty
   85               | AND condition condition_list

   86 condition: ID comOp value
   87          | value comOp value
   88          | ID comOp ID
   89          | value comOp ID
   90          | ID DOT ID comOp value
   91          | value comOp ID DOT ID
   92          | ID DOT ID comOp ID DOT ID

   93 comOp: EQ
   94      | LT
   95      | GT
   96      | LE
   97      | GE
   98      | NE
   99      | LK
  100      | NLK

  101 load_data: LOAD DATA INFILE SSS INTO TABLE ID SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMICOLON (258) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 46 66 67 68 101
    CREATE (259) 31 32 35
    DROP (260) 28 34
    TABLE (261) 28 35 101
    TABLES (262) 29
    INDEX (263) 31 32 33 34
    SELECT (264) 55 59 68
    DESC (265) 30
    SHOW (266) 29 33
    SYNC (267) 24
    INSERT (268) 46
    DELETE (269) 66
    UPDATE (270) 67
    LBRACE (271) 31 32 35 38 49 55 59
    RBRACE (272) 31 32 35 38 49 55 59
    COMMA (273) 37 48 51 61 74 75 77 79 81
    TRX_BEGIN (274) 25
    TRX_COMMIT (275) 26
    TRX_ROLLBACK (276) 27
    INT_T (277) 41
    STRING_T (278) 43
    FLOAT_T (279) 44
    DATE_T (280) 42
    HELP (281) 23
    EXIT (282) 22
    DOT (283) 65 72 75 90 91 92
    INTO (284) 46 101
    VALUES (285) 46
    FROM (286) 33 55 59 66 68
    WHERE (287) 83
    AND (288) 85
    SET (289) 67
    ON (290) 31 32
    LOAD (291) 101
    DATA (292) 101
    INFILE (293) 101
    EQ (294) 67 79 93
    LT (295) 94
    GT (296) 95
    LE (297) 96
    GE (298) 97
    NE (299) 98
    LK (300) 99
    NLK (301) 100
    UNIQUE (302) 32
    NUMBER <number> (303) 40 52 56
    FLOAT <floats> (304) 53 57
    ID <string> (305) 28 30 31 32 33 34 35 45 46 55 59 61 64 65 66 67 68 71 72 74 75 77 79 81 86 88 89 90 91 92 101
    PATH <string> (306)
    SSS <string> (307) 54 58 101
    STAR <string> (308) 62 63 69 70
    STRING_V <string> (309)


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    commands (56)
        on left: 1 2
        on right: 0 2
    command (57)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 2
    exit (58)
        on left: 22
        on right: 19
    help (59)
        on left: 23
        on right: 18
    sync (60)
        on left: 24
        on right: 13
    begin (61)
        on left: 25
        on right: 14
    commit (62)
        on left: 26
        on right: 15
    rollback (63)
        on left: 27
        on right: 16
    drop_table (64)
        on left: 28
        on right: 8
    show_tables (65)
        on left: 29
        on right: 9
    desc_table (66)
        on left: 30
        on right: 10
    create_index (67)
        on left: 31
        on right: 11
    create_unique_index (68)
        on left: 32
        on right: 21
    show_index (69)
        on left: 33
        on right: 20
    drop_index (70)
        on left: 34
        on right: 12
    create_table (71)
        on left: 35
        on right: 7
    attr_def_list (72)
        on left: 36 37
        on right: 35 37
    attr_def (73)
        on left: 38 39
        on right: 35 37
    number <number> (74)
        on left: 40
        on right: 38
    type <number> (75)
        on left: 41 42 43 44
        on right: 38 39
    ID_get (76)
        on left: 45
        on right: 38 39
    insert (77)
        on left: 46
        on right: 4
    multi_value_list (78)
        on left: 47 48
        on right: 46 48
    brace_value_list (79)
        on left: 49
        on right: 46 48
    value_list (80)
        on left: 50 51
        on right: 49 51
    value <value1> (81)
        on left: 52 53 54 55
        on right: 49 51 86 87 89 90 91
    value_update (82)
        on left: 56 57 58 59
        on right: 67 79
    update_sub_rel_list (83)
        on left: 60 61
        on right: 55 59 61
    select_attr_update_sub (84)
        on left: 62 63 64 65
        on right: 55 59
    delete (85)
        on left: 66
        on right: 6
    update (86)
        on left: 67
        on right: 5
    select (87)
        on left: 68
        on right: 3
    select_attr (88)
        on left: 69 70 71 72
        on right: 68
    attr_list (89)
        on left: 73 74 75
        on right: 63 64 65 70 71 72 74 75
    index_list (90)
        on left: 76 77
        on right: 31 32 77
    update_id_list (91)
        on left: 78 79
        on right: 67 79
    rel_list (92)
        on left: 80 81
        on right: 68 81
    where (93)
        on left: 82 83
        on right: 55 59 66 67 68
    condition_list (94)
        on left: 84 85
        on right: 83 85
    condition <condition1> (95)
        on left: 86 87 88 89 90 91 92
        on right: 83 85
    comOp (96)
        on left: 93 94 95 96 97 98 99 100
        on right: 86 87 88 89 90 91 92
    load_data (97)
        on left: 101
        on right: 17


State 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


State 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end          shift, and go to state 2
    CREATE        shift, and go to state 3
    DROP          shift, and go to state 4
    SELECT        shift, and go to state 5
    DESC          shift, and go to state 6
    SHOW          shift, and go to state 7
    SYNC          shift, and go to state 8
    INSERT        shift, and go to state 9
    DELETE        shift, and go to state 10
    UPDATE        shift, and go to state 11
    TRX_BEGIN     shift, and go to state 12
    TRX_COMMIT    shift, and go to state 13
    TRX_ROLLBACK  shift, and go to state 14
    HELP          shift, and go to state 15
    EXIT          shift, and go to state 16
    LOAD          shift, and go to state 17

    command              go to state 18
    exit                 go to state 19
    help                 go to state 20
    sync                 go to state 21
    begin                go to state 22
    commit               go to state 23
    rollback             go to state 24
    drop_table           go to state 25
    show_tables          go to state 26
    desc_table           go to state 27
    create_index         go to state 28
    create_unique_index  go to state 29
    show_index           go to state 30
    drop_index           go to state 31
    create_table         go to state 32
    insert               go to state 33
    delete               go to state 34
    update               go to state 35
    select               go to state 36
    load_data            go to state 37


State 2

    0 $accept: commands $end .

    $default  accept


State 3

   31 create_index: CREATE . INDEX ID ON ID LBRACE ID index_list RBRACE SEMICOLON
   32 create_unique_index: CREATE . UNIQUE INDEX ID ON ID LBRACE ID index_list RBRACE SEMICOLON
   35 create_table: CREATE . TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    TABLE   shift, and go to state 38
    INDEX   shift, and go to state 39
    UNIQUE  shift, and go to state 40


State 4

   28 drop_table: DROP . TABLE ID SEMICOLON
   34 drop_index: DROP . INDEX ID SEMICOLON

    TABLE  shift, and go to state 41
    INDEX  shift, and go to state 42


State 5

   68 select: SELECT . select_attr FROM ID rel_list where SEMICOLON

    ID    shift, and go to state 43
    STAR  shift, and go to state 44

    select_attr  go to state 45


State 6

   30 desc_table: DESC . ID SEMICOLON

    ID  shift, and go to state 46


State 7

   29 show_tables: SHOW . TABLES SEMICOLON
   33 show_index: SHOW . INDEX FROM ID SEMICOLON

    TABLES  shift, and go to state 47
    INDEX   shift, and go to state 48


State 8

   24 sync: SYNC . SEMICOLON

    SEMICOLON  shift, and go to state 49


State 9

   46 insert: INSERT . INTO ID VALUES brace_value_list multi_value_list SEMICOLON

    INTO  shift, and go to state 50


State 10

   66 delete: DELETE . FROM ID where SEMICOLON

    FROM  shift, and go to state 51


State 11

   67 update: UPDATE . ID SET ID EQ value_update update_id_list where SEMICOLON

    ID  shift, and go to state 52


State 12

   25 begin: TRX_BEGIN . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 13

   26 commit: TRX_COMMIT . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 14

   27 rollback: TRX_ROLLBACK . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 15

   23 help: HELP . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 16

   22 exit: EXIT . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 17

  101 load_data: LOAD . DATA INFILE SSS INTO TABLE ID SEMICOLON

    DATA  shift, and go to state 58


State 18

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


State 19

   19 command: exit .

    $default  reduce using rule 19 (command)


State 20

   18 command: help .

    $default  reduce using rule 18 (command)


State 21

   13 command: sync .

    $default  reduce using rule 13 (command)


State 22

   14 command: begin .

    $default  reduce using rule 14 (command)


State 23

   15 command: commit .

    $default  reduce using rule 15 (command)


State 24

   16 command: rollback .

    $default  reduce using rule 16 (command)


State 25

    8 command: drop_table .

    $default  reduce using rule 8 (command)


State 26

    9 command: show_tables .

    $default  reduce using rule 9 (command)


State 27

   10 command: desc_table .

    $default  reduce using rule 10 (command)


State 28

   11 command: create_index .

    $default  reduce using rule 11 (command)


State 29

   21 command: create_unique_index .

    $default  reduce using rule 21 (command)


State 30

   20 command: show_index .

    $default  reduce using rule 20 (command)


State 31

   12 command: drop_index .

    $default  reduce using rule 12 (command)


State 32

    7 command: create_table .

    $default  reduce using rule 7 (command)


State 33

    4 command: insert .

    $default  reduce using rule 4 (command)


State 34

    6 command: delete .

    $default  reduce using rule 6 (command)


State 35

    5 command: update .

    $default  reduce using rule 5 (command)


State 36

    3 command: select .

    $default  reduce using rule 3 (command)


State 37

   17 command: load_data .

    $default  reduce using rule 17 (command)


State 38

   35 create_table: CREATE TABLE . ID LBRACE attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 59


State 39

   31 create_index: CREATE INDEX . ID ON ID LBRACE ID index_list RBRACE SEMICOLON

    ID  shift, and go to state 60


State 40

   32 create_unique_index: CREATE UNIQUE . INDEX ID ON ID LBRACE ID index_list RBRACE SEMICOLON

    INDEX  shift, and go to state 61


State 41

   28 drop_table: DROP TABLE . ID SEMICOLON

    ID  shift, and go to state 62


State 42

   34 drop_index: DROP INDEX . ID SEMICOLON

    ID  shift, and go to state 63


State 43

   71 select_attr: ID . attr_list
   72            | ID . DOT ID attr_list

    COMMA  shift, and go to state 64
    DOT    shift, and go to state 65

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 66


State 44

   69 select_attr: STAR .
   70            | STAR . attr_list

    COMMA  shift, and go to state 64

    FROM      reduce using rule 69 (select_attr)
    FROM      [reduce using rule 73 (attr_list)]
    $default  reduce using rule 69 (select_attr)

    attr_list  go to state 67


State 45

   68 select: SELECT select_attr . FROM ID rel_list where SEMICOLON

    FROM  shift, and go to state 68


State 46

   30 desc_table: DESC ID . SEMICOLON

    SEMICOLON  shift, and go to state 69


State 47

   29 show_tables: SHOW TABLES . SEMICOLON

    SEMICOLON  shift, and go to state 70


State 48

   33 show_index: SHOW INDEX . FROM ID SEMICOLON

    FROM  shift, and go to state 71


State 49

   24 sync: SYNC SEMICOLON .

    $default  reduce using rule 24 (sync)


State 50

   46 insert: INSERT INTO . ID VALUES brace_value_list multi_value_list SEMICOLON

    ID  shift, and go to state 72


State 51

   66 delete: DELETE FROM . ID where SEMICOLON

    ID  shift, and go to state 73


State 52

   67 update: UPDATE ID . SET ID EQ value_update update_id_list where SEMICOLON

    SET  shift, and go to state 74


State 53

   25 begin: TRX_BEGIN SEMICOLON .

    $default  reduce using rule 25 (begin)


State 54

   26 commit: TRX_COMMIT SEMICOLON .

    $default  reduce using rule 26 (commit)


State 55

   27 rollback: TRX_ROLLBACK SEMICOLON .

    $default  reduce using rule 27 (rollback)


State 56

   23 help: HELP SEMICOLON .

    $default  reduce using rule 23 (help)


State 57

   22 exit: EXIT SEMICOLON .

    $default  reduce using rule 22 (exit)


State 58

  101 load_data: LOAD DATA . INFILE SSS INTO TABLE ID SEMICOLON

    INFILE  shift, and go to state 75


State 59

   35 create_table: CREATE TABLE ID . LBRACE attr_def attr_def_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 76


State 60

   31 create_index: CREATE INDEX ID . ON ID LBRACE ID index_list RBRACE SEMICOLON

    ON  shift, and go to state 77


State 61

   32 create_unique_index: CREATE UNIQUE INDEX . ID ON ID LBRACE ID index_list RBRACE SEMICOLON

    ID  shift, and go to state 78


State 62

   28 drop_table: DROP TABLE ID . SEMICOLON

    SEMICOLON  shift, and go to state 79


State 63

   34 drop_index: DROP INDEX ID . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 64

   74 attr_list: COMMA . ID attr_list
   75          | COMMA . ID DOT ID attr_list

    ID  shift, and go to state 81


State 65

   72 select_attr: ID DOT . ID attr_list

    ID  shift, and go to state 82


State 66

   71 select_attr: ID attr_list .

    $default  reduce using rule 71 (select_attr)


State 67

   70 select_attr: STAR attr_list .

    $default  reduce using rule 70 (select_attr)


State 68

   68 select: SELECT select_attr FROM . ID rel_list where SEMICOLON

    ID  shift, and go to state 83


State 69

   30 desc_table: DESC ID SEMICOLON .

    $default  reduce using rule 30 (desc_table)


State 70

   29 show_tables: SHOW TABLES SEMICOLON .

    $default  reduce using rule 29 (show_tables)


State 71

   33 show_index: SHOW INDEX FROM . ID SEMICOLON

    ID  shift, and go to state 84


State 72

   46 insert: INSERT INTO ID . VALUES brace_value_list multi_value_list SEMICOLON

    VALUES  shift, and go to state 85


State 73

   66 delete: DELETE FROM ID . where SEMICOLON

    WHERE  shift, and go to state 86

    $default  reduce using rule 82 (where)

    where  go to state 87


State 74

   67 update: UPDATE ID SET . ID EQ value_update update_id_list where SEMICOLON

    ID  shift, and go to state 88


State 75

  101 load_data: LOAD DATA INFILE . SSS INTO TABLE ID SEMICOLON

    SSS  shift, and go to state 89


State 76

   35 create_table: CREATE TABLE ID LBRACE . attr_def attr_def_list RBRACE SEMICOLON

    ID  shift, and go to state 90

    attr_def  go to state 91
    ID_get    go to state 92


State 77

   31 create_index: CREATE INDEX ID ON . ID LBRACE ID index_list RBRACE SEMICOLON

    ID  shift, and go to state 93


State 78

   32 create_unique_index: CREATE UNIQUE INDEX ID . ON ID LBRACE ID index_list RBRACE SEMICOLON

    ON  shift, and go to state 94


State 79

   28 drop_table: DROP TABLE ID SEMICOLON .

    $default  reduce using rule 28 (drop_table)


State 80

   34 drop_index: DROP INDEX ID SEMICOLON .

    $default  reduce using rule 34 (drop_index)


State 81

   74 attr_list: COMMA ID . attr_list
   75          | COMMA ID . DOT ID attr_list

    COMMA  shift, and go to state 64
    DOT    shift, and go to state 95

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 96


State 82

   72 select_attr: ID DOT ID . attr_list

    COMMA  shift, and go to state 64

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 97


State 83

   68 select: SELECT select_attr FROM ID . rel_list where SEMICOLON

    COMMA  shift, and go to state 98

    $default  reduce using rule 80 (rel_list)

    rel_list  go to state 99


State 84

   33 show_index: SHOW INDEX FROM ID . SEMICOLON

    SEMICOLON  shift, and go to state 100


State 85

   46 insert: INSERT INTO ID VALUES . brace_value_list multi_value_list SEMICOLON

    LBRACE  shift, and go to state 101

    brace_value_list  go to state 102


State 86

   83 where: WHERE . condition condition_list

    LBRACE  shift, and go to state 103
    NUMBER  shift, and go to state 104
    FLOAT   shift, and go to state 105
    ID      shift, and go to state 106
    SSS     shift, and go to state 107

    value      go to state 108
    condition  go to state 109


State 87

   66 delete: DELETE FROM ID where . SEMICOLON

    SEMICOLON  shift, and go to state 110


State 88

   67 update: UPDATE ID SET ID . EQ value_update update_id_list where SEMICOLON

    EQ  shift, and go to state 111


State 89

  101 load_data: LOAD DATA INFILE SSS . INTO TABLE ID SEMICOLON

    INTO  shift, and go to state 112


State 90

   45 ID_get: ID .

    $default  reduce using rule 45 (ID_get)


State 91

   35 create_table: CREATE TABLE ID LBRACE attr_def . attr_def_list RBRACE SEMICOLON

    COMMA  shift, and go to state 113

    $default  reduce using rule 36 (attr_def_list)

    attr_def_list  go to state 114


State 92

   38 attr_def: ID_get . type LBRACE number RBRACE
   39         | ID_get . type

    INT_T     shift, and go to state 115
    STRING_T  shift, and go to state 116
    FLOAT_T   shift, and go to state 117
    DATE_T    shift, and go to state 118

    type  go to state 119


State 93

   31 create_index: CREATE INDEX ID ON ID . LBRACE ID index_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 120


State 94

   32 create_unique_index: CREATE UNIQUE INDEX ID ON . ID LBRACE ID index_list RBRACE SEMICOLON

    ID  shift, and go to state 121


State 95

   75 attr_list: COMMA ID DOT . ID attr_list

    ID  shift, and go to state 122


State 96

   74 attr_list: COMMA ID attr_list .

    $default  reduce using rule 74 (attr_list)


State 97

   72 select_attr: ID DOT ID attr_list .

    $default  reduce using rule 72 (select_attr)


State 98

   81 rel_list: COMMA . ID rel_list

    ID  shift, and go to state 123


State 99

   68 select: SELECT select_attr FROM ID rel_list . where SEMICOLON

    WHERE  shift, and go to state 86

    $default  reduce using rule 82 (where)

    where  go to state 124


State 100

   33 show_index: SHOW INDEX FROM ID SEMICOLON .

    $default  reduce using rule 33 (show_index)


State 101

   49 brace_value_list: LBRACE . value value_list RBRACE

    LBRACE  shift, and go to state 103
    NUMBER  shift, and go to state 104
    FLOAT   shift, and go to state 105
    SSS     shift, and go to state 107

    value  go to state 125


State 102

   46 insert: INSERT INTO ID VALUES brace_value_list . multi_value_list SEMICOLON

    COMMA  shift, and go to state 126

    $default  reduce using rule 47 (multi_value_list)

    multi_value_list  go to state 127


State 103

   55 value: LBRACE . SELECT select_attr_update_sub FROM ID update_sub_rel_list where RBRACE

    SELECT  shift, and go to state 128


State 104

   52 value: NUMBER .

    $default  reduce using rule 52 (value)


State 105

   53 value: FLOAT .

    $default  reduce using rule 53 (value)


State 106

   86 condition: ID . comOp value
   88          | ID . comOp ID
   90          | ID . DOT ID comOp value
   92          | ID . DOT ID comOp ID DOT ID

    DOT  shift, and go to state 129
    EQ   shift, and go to state 130
    LT   shift, and go to state 131
    GT   shift, and go to state 132
    LE   shift, and go to state 133
    GE   shift, and go to state 134
    NE   shift, and go to state 135
    LK   shift, and go to state 136
    NLK  shift, and go to state 137

    comOp  go to state 138


State 107

   54 value: SSS .

    $default  reduce using rule 54 (value)


State 108

   87 condition: value . comOp value
   89          | value . comOp ID
   91          | value . comOp ID DOT ID

    EQ   shift, and go to state 130
    LT   shift, and go to state 131
    GT   shift, and go to state 132
    LE   shift, and go to state 133
    GE   shift, and go to state 134
    NE   shift, and go to state 135
    LK   shift, and go to state 136
    NLK  shift, and go to state 137

    comOp  go to state 139


State 109

   83 where: WHERE condition . condition_list

    AND  shift, and go to state 140

    $default  reduce using rule 84 (condition_list)

    condition_list  go to state 141


State 110

   66 delete: DELETE FROM ID where SEMICOLON .

    $default  reduce using rule 66 (delete)


State 111

   67 update: UPDATE ID SET ID EQ . value_update update_id_list where SEMICOLON

    LBRACE  shift, and go to state 142
    NUMBER  shift, and go to state 143
    FLOAT   shift, and go to state 144
    SSS     shift, and go to state 145

    value_update  go to state 146


State 112

  101 load_data: LOAD DATA INFILE SSS INTO . TABLE ID SEMICOLON

    TABLE  shift, and go to state 147


State 113

   37 attr_def_list: COMMA . attr_def attr_def_list

    ID  shift, and go to state 90

    attr_def  go to state 148
    ID_get    go to state 92


State 114

   35 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list . RBRACE SEMICOLON

    RBRACE  shift, and go to state 149


State 115

   41 type: INT_T .

    $default  reduce using rule 41 (type)


State 116

   43 type: STRING_T .

    $default  reduce using rule 43 (type)


State 117

   44 type: FLOAT_T .

    $default  reduce using rule 44 (type)


State 118

   42 type: DATE_T .

    $default  reduce using rule 42 (type)


State 119

   38 attr_def: ID_get type . LBRACE number RBRACE
   39         | ID_get type .

    LBRACE  shift, and go to state 150

    $default  reduce using rule 39 (attr_def)


State 120

   31 create_index: CREATE INDEX ID ON ID LBRACE . ID index_list RBRACE SEMICOLON

    ID  shift, and go to state 151


State 121

   32 create_unique_index: CREATE UNIQUE INDEX ID ON ID . LBRACE ID index_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 152


State 122

   75 attr_list: COMMA ID DOT ID . attr_list

    COMMA  shift, and go to state 64

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 153


State 123

   81 rel_list: COMMA ID . rel_list

    COMMA  shift, and go to state 98

    $default  reduce using rule 80 (rel_list)

    rel_list  go to state 154


State 124

   68 select: SELECT select_attr FROM ID rel_list where . SEMICOLON

    SEMICOLON  shift, and go to state 155


State 125

   49 brace_value_list: LBRACE value . value_list RBRACE

    COMMA  shift, and go to state 156

    $default  reduce using rule 50 (value_list)

    value_list  go to state 157


State 126

   48 multi_value_list: COMMA . brace_value_list multi_value_list

    LBRACE  shift, and go to state 101

    brace_value_list  go to state 158


State 127

   46 insert: INSERT INTO ID VALUES brace_value_list multi_value_list . SEMICOLON

    SEMICOLON  shift, and go to state 159


State 128

   55 value: LBRACE SELECT . select_attr_update_sub FROM ID update_sub_rel_list where RBRACE

    ID    shift, and go to state 160
    STAR  shift, and go to state 161

    select_attr_update_sub  go to state 162


State 129

   90 condition: ID DOT . ID comOp value
   92          | ID DOT . ID comOp ID DOT ID

    ID  shift, and go to state 163


State 130

   93 comOp: EQ .

    $default  reduce using rule 93 (comOp)


State 131

   94 comOp: LT .

    $default  reduce using rule 94 (comOp)


State 132

   95 comOp: GT .

    $default  reduce using rule 95 (comOp)


State 133

   96 comOp: LE .

    $default  reduce using rule 96 (comOp)


State 134

   97 comOp: GE .

    $default  reduce using rule 97 (comOp)


State 135

   98 comOp: NE .

    $default  reduce using rule 98 (comOp)


State 136

   99 comOp: LK .

    $default  reduce using rule 99 (comOp)


State 137

  100 comOp: NLK .

    $default  reduce using rule 100 (comOp)


State 138

   86 condition: ID comOp . value
   88          | ID comOp . ID

    LBRACE  shift, and go to state 103
    NUMBER  shift, and go to state 104
    FLOAT   shift, and go to state 105
    ID      shift, and go to state 164
    SSS     shift, and go to state 107

    value  go to state 165


State 139

   87 condition: value comOp . value
   89          | value comOp . ID
   91          | value comOp . ID DOT ID

    LBRACE  shift, and go to state 103
    NUMBER  shift, and go to state 104
    FLOAT   shift, and go to state 105
    ID      shift, and go to state 166
    SSS     shift, and go to state 107

    value  go to state 167


State 140

   85 condition_list: AND . condition condition_list

    LBRACE  shift, and go to state 103
    NUMBER  shift, and go to state 104
    FLOAT   shift, and go to state 105
    ID      shift, and go to state 106
    SSS     shift, and go to state 107

    value      go to state 108
    condition  go to state 168


State 141

   83 where: WHERE condition condition_list .

    $default  reduce using rule 83 (where)


State 142

   59 value_update: LBRACE . SELECT select_attr_update_sub FROM ID update_sub_rel_list where RBRACE

    SELECT  shift, and go to state 169


State 143

   56 value_update: NUMBER .

    $default  reduce using rule 56 (value_update)


State 144

   57 value_update: FLOAT .

    $default  reduce using rule 57 (value_update)


State 145

   58 value_update: SSS .

    $default  reduce using rule 58 (value_update)


State 146

   67 update: UPDATE ID SET ID EQ value_update . update_id_list where SEMICOLON

    COMMA  shift, and go to state 170

    $default  reduce using rule 78 (update_id_list)

    update_id_list  go to state 171


State 147

  101 load_data: LOAD DATA INFILE SSS INTO TABLE . ID SEMICOLON

    ID  shift, and go to state 172


State 148

   37 attr_def_list: COMMA attr_def . attr_def_list

    COMMA  shift, and go to state 113

    $default  reduce using rule 36 (attr_def_list)

    attr_def_list  go to state 173


State 149

   35 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE . SEMICOLON

    SEMICOLON  shift, and go to state 174


State 150

   38 attr_def: ID_get type LBRACE . number RBRACE

    NUMBER  shift, and go to state 175

    number  go to state 176


State 151

   31 create_index: CREATE INDEX ID ON ID LBRACE ID . index_list RBRACE SEMICOLON

    COMMA  shift, and go to state 177

    $default  reduce using rule 76 (index_list)

    index_list  go to state 178


State 152

   32 create_unique_index: CREATE UNIQUE INDEX ID ON ID LBRACE . ID index_list RBRACE SEMICOLON

    ID  shift, and go to state 179


State 153

   75 attr_list: COMMA ID DOT ID attr_list .

    $default  reduce using rule 75 (attr_list)


State 154

   81 rel_list: COMMA ID rel_list .

    $default  reduce using rule 81 (rel_list)


State 155

   68 select: SELECT select_attr FROM ID rel_list where SEMICOLON .

    $default  reduce using rule 68 (select)


State 156

   51 value_list: COMMA . value value_list

    LBRACE  shift, and go to state 103
    NUMBER  shift, and go to state 104
    FLOAT   shift, and go to state 105
    SSS     shift, and go to state 107

    value  go to state 180


State 157

   49 brace_value_list: LBRACE value value_list . RBRACE

    RBRACE  shift, and go to state 181


State 158

   48 multi_value_list: COMMA brace_value_list . multi_value_list

    COMMA  shift, and go to state 126

    $default  reduce using rule 47 (multi_value_list)

    multi_value_list  go to state 182


State 159

   46 insert: INSERT INTO ID VALUES brace_value_list multi_value_list SEMICOLON .

    $default  reduce using rule 46 (insert)


State 160

   64 select_attr_update_sub: ID . attr_list
   65                       | ID . DOT ID attr_list

    COMMA  shift, and go to state 64
    DOT    shift, and go to state 183

    $default  reduce using rule 73 (attr_list)

    attr_list  go to state 184


State 161

   62 select_attr_update_sub: STAR .
   63                       | STAR . attr_list

    COMMA  shift, and go to state 64

    FROM      reduce using rule 62 (select_attr_update_sub)
    FROM      [reduce using rule 73 (attr_list)]
    $default  reduce using rule 62 (select_attr_update_sub)

    attr_list  go to state 185


State 162

   55 value: LBRACE SELECT select_attr_update_sub . FROM ID update_sub_rel_list where RBRACE

    FROM  shift, and go to state 186


State 163

   90 condition: ID DOT ID . comOp value
   92          | ID DOT ID . comOp ID DOT ID

    EQ   shift, and go to state 130
    LT   shift, and go to state 131
    GT   shift, and go to state 132
    LE   shift, and go to state 133
    GE   shift, and go to state 134
    NE   shift, and go to state 135
    LK   shift, and go to state 136
    NLK  shift, and go to state 137

    comOp  go to state 187


State 164

   88 condition: ID comOp ID .

    $default  reduce using rule 88 (condition)


State 165

   86 condition: ID comOp value .

    $default  reduce using rule 86 (condition)


State 166

   89 condition: value comOp ID .
   91          | value comOp ID . DOT ID

    DOT  shift, and go to state 188

    $default  reduce using rule 89 (condition)


State 167

   87 condition: value comOp value .

    $default  reduce using rule 87 (condition)


State 168

   85 condition_list: AND condition . condition_list

    AND  shift, and go to state 140

    $default  reduce using rule 84 (condition_list)

    condition_list  go to state 189


State 169

   59 value_update: LBRACE SELECT . select_attr_update_sub FROM ID update_sub_rel_list where RBRACE

    ID    shift, and go to state 160
    STAR  shift, and go to state 161

    select_attr_update_sub  go to state 190


State 170

   79 update_id_list: COMMA . ID EQ value_update update_id_list

    ID  shift, and go to state 191


State 171

   67 update: UPDATE ID SET ID EQ value_update update_id_list . where SEMICOLON

    WHERE  shift, and go to state 86

    $default  reduce using rule 82 (where)

    where  go to state 192


State 172

  101 load_data: LOAD DATA INFILE SSS INTO TABLE ID . SEMICOLON

    SEMICOLON  shift, and go to state 193


State 173

   37 attr_def_list: COMMA attr_def attr_def_list .

    $default  reduce using rule 37 (attr_def_list)


State 174

   35 create_table: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE SEMICOLON .

    $default  reduce using rule 35 (create_table)


State 175

   40 number: NUMBER .

    $default  reduce using rule 40 (number)

